syntax = "proto3";

package padlock;

import "tsjson.proto";
option (tsjson.npm_package) = "@llkdemo/padlock";
option (tsjson.import_path) = "pkcs11";

option go_package = "github.com/LLKennedy/padlock/padlockpb";

import "mechanisms.proto";
import "attributes.proto";

message ModuleInfo {
	Version cryptoki_version = 1;
	string manufacturer_id = 2;
	uint64 flags = 3;
	string library_description = 4;
	Version library_version = 5;
}

message SlotInfo {
	uint64 id = 1;
	string slot_description = 2;
	string manufacturer_id = 3;
	uint64 flags = 4;
	Version hardware_version = 5;
	Version firmware_version = 6;
	TokenInfo token_info = 7;
}

message TokenInfo {
	string label = 1;
	string manufacturer_id = 2;
	string model = 3;
	string serial_number = 4;
	uint64 flags = 5;
	uint64 max_session_count = 6;
	uint64 session_count = 7;
	uint64 max_rw_session_count = 8;
	uint64 rw_session_count = 9;
	uint64 max_pin_len = 10;
	uint64 min_pin_len = 11;
	uint64 total_public_memory = 12;
	uint64 free_public_memory = 13;
	uint64 total_private_memory = 14;
	uint64 free_private_memory = 15;
	Version hardware_version = 16;
	Version firmware_version = 17;
	string utctime = 18;
}

message Version {
	uint32 major = 1;
	uint32 minor = 2;
}

message SupportedMechanism {
	MechanismType type = 1;
	uint64 min_key_size = 2;
	uint64 max_key_size = 3;
	bytes flags = 4;
}

message Mechanism {
	MechanismType type = 1;
	oneof data {
		bytes raw = 101;
		MechanismECDH1DeriveParams ecdh1 = 102;
		MechanismGCMParams gcm = 103;
		MechanismOAEPParams oaep = 104;
		MechanismPSSParams pss = 105;
	}
}

message MechanismECDH1DeriveParams {
	uint32 kdf = 1;
	bytes shared_data = 2;
	bytes public_key_data = 3;
}

message MechanismGCMParams {
	bytes iv = 1;
	bytes aad = 2;
	uint32 tag_size = 3;
}

message MechanismOAEPParams {
	uint32 hash_alg = 1;
	uint32 mgf = 2;
	uint32 source_type = 3;
	bytes source_data = 4;
}

message MechanismPSSParams {
	uint32 hash_alg = 1;
	uint32 mgf = 2;
	uint32 salt_length = 3;
}

message Attribute {
	AttributeType type = 1;
	bytes value = 2;
}

message P11Object {
	string label = 1;
	string uuid = 2;
	// TODO: get class/key type/etc.
}